tests/rosetta/transpiler/Clojure/cartesian-product-of-two-or-more-lists-1.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/cartesian-product-of-two-or-more-lists-1.clj:18:80).
Unable to resolve symbol: cart2_x in this context

Full report at:
/tmp/clojure-5855867818506026889.edn
